# CIPette

./: .bandit  .env.example  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.toml  config.toml.example  env.example  pyproject.toml  requirements.txt  ruff.toml
.claude/: CLAUDE.md
.claude/project/: design-guide.md  glossary.md  implementation-plan.md  project-overview.md
.github/workflows/: release.yml  test.yml
cipette/: __init__.py  app.py  collector.py  config.py  config_manager.py  data_processor.py  database.py  error_handling.py  etag_manager.py  github_client.py  health_calculator.py  logging_config.py  retry.py  schema_migration.py  sql_security.py  version.py
docs/: API.md  USER_GUIDE.md
scripts/: security_check.sh
src/: config.py  data_collector.py  database.py
static/: style.css
templates/: base.html  dashboard.html  error.html
tests/: test_app.py  test_data_collector.py  test_database.py  test_database_security.py  test_error_handling.py  test_integration.py  test_sql_security.py  test_sql_security_improved.py  test_version.py
